--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -55,10 +56,11 @@
 
         <provider
             android:name="com.facebook.FacebookContentProvider"
-            android:authorities="com.facebook.app.FacebookContentProvider636177143389470"
+            android:authorities="com.facebook.app.FacebookContentProvider148243599355678"
             android:exported="true" />
 
         <!-- <activity android:name=".ScreenLock"></activity> -->
+
         <activity android:name=".TopPlayersActivity"></activity>
     </application>
 
